--- a/Impact_model_method/TotalP_external_all.Rmd
+++ b/Impact_model_method/TotalP_external_all.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "TotalP_external_all.Rmd"
 author: "Lauren A. Knose, ORISE-EPA"
-date: '2023-06-20'
+date: '2024-05-07'
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -24,156 +24,50 @@ Packages loaded.
 b) Loading dependent data....
 
 ```{r}
-streams<- read.csv(file="Cleaned_data/TotalP_inflows.csv") 
-atm<- read.csv(file="Cleaned_data/TotalP_atm.csv")
+SWAT_totP<- read.csv(file="Original_data/HarshaLake_SWAT_loads_2000to2018.csv") 
 ```
 
 Data loaded.
 
 # Step 2. Define, filter, and merge data:
 
-a) defining and filtering data...
-
 ```{r}
-streams2<- streams %>%
-  mutate(X=NULL, #remove index column
-         sampledate=as.Date(sampledate, origin="1899-12-30"),
-         Pstreams_kgday=allInflows_TotP_kgday) %>%#reformat date
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
-  select(c("sampledate", "Pstreams_kgday")) #remove the extra columns
-atm2<- atm %>%
-  mutate(X=NULL, #remove index column
-         sampledate=as.Date(sampledate, origin="1899-12-30"),
-         Patm_kgday=atm_TotP_kgday)%>% #reformat date
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
-  select(c("sampledate", "Patm_kgday")) #remove the extra columns
+### identify the labels used for fields ###
+colnames(SWAT_totP) #identify labels for fields to filter
+head(SWAT_totP$Date) #determine format for sample date
+
+extload<- SWAT_totP %>%
+  mutate(sampledate=as.Date(Date, format="%m/%d/%Y",origin="1899-12-30"),
+         Yr=as.numeric(format(sampledate, "%Y")), #renames field
+         daynum=as.numeric(format(sampledate, "%j"))) %>%#reformat date
+  filter(daynum>=(152-7) & daynum<=(258+7), #filter for cyanoHAB season
+         Yr=="2015"|Yr=="2017"|Yr=="2018"|Yr=="2019") %>% #filter for years
+  select(sampledate, Yr, daynum, TOTN_kg_All, TOTP_kg_All)
 ```
 
 Data defined
 
-b) merging data...
+# Step 3. Summarize and view data:
 
 ```{r}
-extP_load<- merge(atm2, streams2, by=c("sampledate")) #adds two data files together
-extP_load <- extP_load %>%
-  mutate(Pext_kgday_noother=(Patm_kgday + Pstreams_kgday), #combine atm P and stream P
-         Pother_kgday=(Pext_kgday_noother*.47), #assign new column for P_other with 47% of total
-         Pext_kgday=Pext_kgday_noother*1.47) #increase P_ext 47% to account for P_other
+### summarize by year ###
+extload_sum<- extload %>%
+  group_by(Yr) %>%
+  summarize(Yr_totN_kgyr=sum(TOTN_kg_All, na.rm=TRUE),
+            meanTN_kgday=mean(TOTN_kg_All, na.rm=TRUE),
+            se_TN_kgday=(sd(TOTN_kg_All, na.rm=TRUE)/sqrt(length(TOTN_kg_All))),
+            Yr_totP_kgyr=sum(TOTP_kg_All, na.rm=TRUE),
+            meanTP_kgday=mean(TOTP_kg_All, na.rm=TRUE),
+            se_TP_kgday=(sd(TOTP_kg_All, na.rm=TRUE)/sqrt(length(TOTP_kg_All))))
+extload_sum
 ```
 
-External P loading merged.
+Annual and daily average total P and total N from external loading calculated.
 
-# Step 3. Save data as new data file:
+# Step 4. Save data as new data file:
 
 ```{r}
-write.csv(extP_load, file="Cleaned_data/TotalP_allext.csv")
+write.csv(extload, file="Cleaned_data/TotalP_allext.csv")
 ```
 
 New data file created with total external P loading.
-
-# Step 4. Summarize and view data:
-
-a) plot total P load for CyanoHAB season by source for each year...
-
-```{r}
-extP_load_long<- melt(extP_load, #the table you want to reshape wide to long
-               id.vars=c("sampledate"), #the column to use as unique id
-               measure.vars=c("Patm_kgday","Pstreams_kgday", "Pother_kgday", "Pext_kgday_noother","Pext_kgday"), 
-               #the columns where values will be taken
-               variable.name="Source", #label the source of P loading
-               value.name="Pext_kgday" #label the value with units
-               )
-extP_load_long$Source<-as.character(extP_load_long$Source) #tell R character data held
-extP_load_long<- extP_load_long %>%
-  filter(Source==c("Patm_kgday", "Pstreams_kgday", "Pother_kgday")) #remove totals here first)
-unique(extP_load_long$Source) #check totals were removed
-extP_load_long$Source[extP_load_long$Source=="Patm_kgday"] <- "atmosphere"
-extP_load_long$Source[extP_load_long$Source=="Pstreams_kgday"] <- "streams"
-extP_load_long$Source[extP_load_long$Source=="Pother_kgday"] <- "other"
-
-extP_load_long<- extP_load_long %>%
-  mutate(Yr=as.character(format(sampledate, "%Y")))%>%  #add year back in data frame
-  group_by(Yr, Source) %>% #for each year and each source
-  summarize(TotPext_kgday=sum(Pext_kgday)) %>% #sum up all source Pext_kgday 
-  ungroup()
-  
-write.csv(extP_load_long, file="Products/Figure9b_data.csv") #saves data table
-fig9b<- ggplot(extP_load_long, aes(x=Yr, y=TotPext_kgday, 
-                             fill=Source)) + #separate sources by fill color
-  geom_bar(position="stack", stat="identity", color="black") + #stacked bar graph
-  scale_fill_manual(values=c("grey", "white", "black")) + #atm = grey, streams=black, other=white
-  theme_classic(base_size=12) +
-  labs(x="Year", y="External total P loading (kg/yr)")
-fig9b #print plot
-ggsave(fig9b, file="Products/Figure9b.png")
-```
-
-Total P load by source for each year plotted.
-
-b) calculating average daily and average annual Other total P loading during the CyanoHAB season...
-
-```{r}
-Other_avg<- extP_load %>%
-  summarise(mean=mean(Pother_kgday, #average daily total P loading
-                      na.rm=TRUE),
-            se=(sd(Pother_kgday, na.rm=TRUE)/sqrt(length(Pother_kgday))),
-            min=min(Pother_kgday, na.rm=TRUE),
-            max=max(Pother_kgday, na.rm=TRUE))
-Other_avg
-Other_sumavg<- extP_load %>%
-  mutate(Yr=format(sampledate, "%Y")) %>% #add back in Yr to group data
-  select(Yr, Pother_kgday) %>% #select the fields needed
-  group_by(Yr) %>% #for every year
-  summarize(sum=sum(Pother_kgday)) #add total P load
-Other_sumavg
-mean(Other_sumavg$sum) # print average annual total P loading from other sources
-sd(Other_sumavg$sum)/sqrt(length(Other_sumavg$sum)) #print sd for avg
-```
-
-c) calculate average daily total P load for CyanoHAB season...
-
-```{r}
-Pext_noother_day<- extP_load %>%
-  summarize(mean=mean(Pext_kgday_noother, na.rm=TRUE), #calculate mean
-            se=(sd(Pext_kgday_noother, na.rm=TRUE)/sqrt(length(Pext_kgday_noother))),
-            min=min(Pext_kgday_noother, na.rm=TRUE),
-            max=max(Pext_kgday_noother, na.rm=TRUE)
-            )
-Pext_noother_day # the estimated daily average P_ext without the P_other
-
-Pext_day<- extP_load %>%
-  summarize(mean=mean(Pext_kgday, na.rm=TRUE), #calculate mean
-            se=(sd(Pext_kgday, na.rm=TRUE)/sqrt(length(Pext_kgday))),
-            min=min(Pext_kgday, na.rm=TRUE),
-            max=max(Pext_kgday, na.rm=TRUE)
-            )
-Pext_day # the estimated daily average  P_ext with P_other
-```
-
-Daily average P_ext calculated.
-
-d) calculating average annual total P load for CyanoHAB season...
-
-```{r}
-Pext_noother_yr<- extP_load %>%
-  mutate(Yr=format(sampledate, "%Y")) %>% #add back in Yr to group data
-  group_by(Yr) %>%
-  summarize(sum=sum(Pext_kgday_noother))
-Pext_noother_yr<- Pext_noother_yr %>%
-  summarize(mean=mean(Pext_noother_yr$sum), #print the average annual
-            se=sd(Pext_noother_yr$sum)/sqrt(length(Pext_noother_yr$sum))) #print sd for avg
-Pext_noother_yr #the estimated annual average P_ext without the P_other
-
-Pext_yr<- extP_load %>%
-  mutate(Yr=format(sampledate, "%Y")) %>% #add back in Yr to group data
-  group_by(Yr) %>%
-  summarize(sum=sum(Pext_kgday))
-Pext_yr<- Pext_yr %>%
-  summarize(mean=mean(Pext_yr$sum), #print the average annual
-            se=sd(Pext_yr$sum)/sqrt(length(Pext_yr$sum))) #print sd for avg
-Pext_yr #the estimated annual average P_ext with the P_other
-```
-
-Annual average P_ext calculated.
